@@ -644,6 +644,7 @@ Grzegorz Makarewicz
 David Malcolm
 Ken Manheimer
 Vladimir Marangozov
+Colin Marc
 David Marek
 Doug Marien
 Sven Marnach
